# wallet-bench

./: .gitignore  README.md  config.example.yaml  pyproject.toml  runner.py
.github/ISSUE_TEMPLATE/: provider-request.md
.github/workflows/: collect-market-data.yml  pages.yml
adapters/: base.py  bnbchain_mcp.py  clawlett.py  coinbase_agentkit.py  coinpilot_hyperliquid.py  crossmint.py  crossmint_mcp.py  minara.py  moonpay.py  okx_onchainos.py  para_wallet.py  polymarket_agent.py  privy.py  universal_trading.py
cases/: registry.py
cases/shared/: _utils.py  a01_schema_quality.py  a02_machine_errors.py  a03_deterministic_response.py  a04_token_cost.py  a05_multi_step_recovery.py  ag01_tool_discovery.py  ag02_zero_shot_exec.py  ag03_error_self_recovery.py  ag04_multi_step_plan.py  ag05_context_efficiency.py  (+53 more)
docs/: COMPARISON-REPORT.md  DESIGN-SPEC.md  INTEGRATION-TYPES.md  credential-setup-guide.md  next-steps.md
evaluations/: bnbchain_mcp.yaml  clawlett.yaml  coinbase_agentkit.yaml  coinpilot_hyperliquid.yaml  crossmint.yaml  minara.yaml  moonpay.yaml  okx_onchainos.yaml  para_wallet.yaml  polymarket_agent.yaml  privy.yaml  universal_trading.yaml
providers/: bankr.yaml  bnbchain_mcp.yaml  clawlett.yaml  coinbase_agentkit.yaml  coinpilot_hyperliquid.yaml  crossmint.yaml  minara.yaml  moonpay.yaml  okx_onchainos.yaml  para_wallet.yaml  polymarket_agent.yaml  privy.yaml  universal_trading.yaml
scripts/: build_decision_view.py  collect_market_data.py
web/: app.js  index.html  integration-types.html  recommendations.json  sample-result.json  style.css
(+53 files in other folders)
